@@ -1,3 +1,5 @@
+[COLOR yellow][B]v1.6.1[/B][/COLOR]
+* Wizard update dialog progress doesn't close bug fix.
 [COLOR yellow][B]v1.6.0[/B][/COLOR]
 * Kodi 21 migration message typo.
 * Hide "Build designed for..." in build menu.
